# homematicip-rest-api

./: .clang-format  CMakeLists.txt  configure.bat
app/: CMakeLists.txt
app/hmip_cli_async/: CMakeLists.txt
app/hmip_generate_auth_token/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/hmip/: CMakeLists.txt  CMakeLists.txt.bak  baseconnection.cpp  baseconnection.h  connection.cpp  connection.h
libraries/jsoncpp/: VERSION
libraries/testlib/: CMakeLists.txt  TestUtils.cpp  TestUtils.h
test/: CMakeLists.txt
test/test_generate_auth_token/: CMakeLists.txt  main.cpp
